deploy/minikube/ironic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ironic
  namespace: baremetal-operator-system
  labels:
    app.kubernetes.io/name: ironic
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: ironic
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ironic
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      securityContext:
        fsGroup: 994
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: ironic
          image: quay.io/metal3-io/ironic@sha256:364352ae334d362f8c0ada9618cbb7dd03d333786c5f821b08ef6b4a2d7569f8
          imagePullPolicy: IfNotPresent
          command: ["/bin/runironic"]
          ports:
            - name: api
              containerPort: 6385
          readinessProbe:
            tcpSocket:
              port: 6385
            initialDelaySeconds: 30
            periodSeconds: 15
          livenessProbe:
            tcpSocket:
              port: 6385
            initialDelaySeconds: 60
            periodSeconds: 30
          volumeMounts:
            - name: shared
              mountPath: /shared
            - name: config
              mountPath: /conf
            - name: data
              mountPath: /data
            - name: auth
              mountPath: /auth/ironic
              readOnly: true
            - name: ironic-config
              mountPath: /conf/ironic/zz-auth.conf
              subPath: zz-auth.conf
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsUser: 997
            runAsGroup: 994
        - name: ironic-httpd
          image: quay.io/metal3-io/ironic@sha256:364352ae334d362f8c0ada9618cbb7dd03d333786c5f821b08ef6b4a2d7569f8
          imagePullPolicy: IfNotPresent
          command: ["/bin/runhttpd"]
          ports:
            - name: images
              containerPort: 6180
          readinessProbe:
            httpGet:
              host: 127.0.0.1
              path: /images
              port: 6180
            initialDelaySeconds: 30
            periodSeconds: 15
          volumeMounts:
            - name: shared
              mountPath: /shared
            - name: config
              mountPath: /conf
            - name: data
              mountPath: /data
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsUser: 997
            runAsGroup: 994
        - name: ironic-log-watch
          image: quay.io/metal3-io/ironic@sha256:364352ae334d362f8c0ada9618cbb7dd03d333786c5f821b08ef6b4a2d7569f8
          imagePullPolicy: IfNotPresent
          command: ["/bin/runlogwatch.sh"]
          volumeMounts:
            - name: shared
              mountPath: /shared
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsUser: 997
            runAsGroup: 994
      volumes:
        - name: shared
          emptyDir: {}
        - name: config
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: ironic-data
        - name: auth
          secret:
            secretName: ironic-api-auth
        - name: ironic-config
          configMap:
            name: ironic-api-config
---
apiVersion: v1
kind: Service
metadata:
  name: ironic
  namespace: baremetal-operator-system
spec:
  selector:
    app.kubernetes.io/name: ironic
  ports:
    - name: api
      port: 6385
      targetPort: api
    - name: images
      port: 6180
      targetPort: images
