deploy/minikube/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: go-metal3-api-ingress
  namespace: baremetal-operator-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: go-metal3-api
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8080
